--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,3 +18,9 @@ span{
     color: black;
     transform: scale(1.1);
 }
+
+/* 20260223 開発演習6 yomura haruto add s */
+h3{
+    margin-top: 80px;
+}
+/* 20260223 開発演習6 yomura haruto add e */
